--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.0",
+    "ethers": "^6.13.0",
     "express": "^4.21.0",
     "mongoose": "^8.8.0",
-    "twilio": "^5.3.0",
     "pinata": "^1.0.0",
-    "ethers": "^6.13.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "uuid": "^9.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
-    "@google/generative-ai": "^0.21.0",
-    "crypto": "^1.0.1"
+    "twilio": "^5.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
